CR improvements & suggestions